--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,9 @@ body{
 }
 
 
+
+
+
 /* .button-selected{
                 color:#f28784 ;
                 border-radius: 5px;
@@ -26,3 +29,14 @@ body{
 
 /* hover:text-[#f6d00c] hover:border-b dark:hover:text-white px-3 py-1 mb-1 rounded-md
  text-lg font-bold block !text-red-300 border-b-2 border-red-300 !pb-[1px] */
+
+
+ #command-blur{
+  position: absolute;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, .15);
+    top: 0;
+    left: 0;
+    backdrop-filter: blur(8px);
+ }
